feat(wpisy): dodano wysyłanie zdjęcia z identyfikatorem klienta
